--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -100,3 +100,26 @@
     text-decoration: none;
     color: #909090;
 }
+
+/* CREATE-UPDATE RECORD */
+.page-title{
+    text-align: center;
+    margin: 1rem auto;
+    font-size: 1.4rem;
+
+}
+.form{
+    width: 50%;
+    margin: 0 auto;
+    display: block;
+}
+.form .input {
+    width: 100%;
+    padding: 0.5rem 0.25rem;
+    margin: 0.5rem 0;
+}
+.form .btn{
+    font-size: 1.2rem;
+    padding: 0.75rem 1.25rem;
+    margin-bottom: 1rem;
+}
