--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,12 +6,15 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Workers App
         link(rel="stylesheet", href="/static/css/styles.css")
-    body
+        link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer")
+    body(onload='closeMessage()')
         div.wrapper
             //- LOGO and NAV
             include includes/nav.pug
 
             //- CONTENT  
-            block content 
+            block content
+
+            script(src="/static/javascript/main.js")  
     footer.footer 
         p.footer-text Copyright &copy; 00015272 
