--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -177,3 +177,32 @@
     background-color: green;
     color: #fff
 }
+
+/* SINGLE WORKER */
+.singleTitle {
+    text-align: center;
+    margin-bottom: 1rem;
+    font-size: 18px;
+}
+.singleTitle span {
+    font-weight: 600;
+    color: red;
+}
+.worker{
+    width: 30%;
+    margin: 2rem auto;
+    border: 0.5px solid #ccc;
+}
+.workerHeading{
+    text-align: center;
+    background-color: #ddd;
+    padding: 1rem 0.5rem;
+}
+.workerInfo{
+    font-size: 20px;
+    width: 100%;
+    padding: 0.5rem 0.5rem;
+}
+.workerInfo span:first-child{
+    font-weight: bold;
+}
