The webtech required text inserted

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,4 +17,4 @@ html(lang="en")
 
             script(src="/static/javascript/main.js")  
     footer.footer 
-        p.footer-text Copyright &copy; 00015272 
+        p.footer-text “This web application was created to fulfill Web Technology module’s requirements and does not represent an actual company or service”
